# motif-bridge

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile.PL  README.md  pyproject.toml  test_motif_bridge.sh  update.md
.antigravitycli/: 94a5e71c-f059-4ee7-a3b3-b2f3d2e50682.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
fixtures/: expected_extract.homer  expected_extract.meme  expected_homer2meme.meme  expected_logodds.meme  expected_logodds_bg_0p2.meme  expected_meme2homer.homer  expected_mixed_alphabet.meme  test.meme  test_logodds.homer  test_mixed_alphabet.json  test_motif_boundary.meme  test_negative.meme  test_rna.meme  test_tied_max_bg.meme  test_unicode_desc.meme
motif_bridge/: __init__.py  core.py  io.py
perl_scripts/: homer2meme.pl  meme2homer.pl
python_scripts/: __init__.py  _cli.py  homer2meme.py  meme2homer.py
rust_scripts/: Cargo.toml
rust_scripts/src/: error.rs  io.rs  lib.rs
tests/: test_cli_helpers.py  test_core.py  test_io.py
