[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motif-bridge"
version = "0.2.0"
description = "Cross-language toolkit for converting motifs between MEME and HOMER formats"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Zengyuan Zhao"}]
keywords = ["bioinformatics", "motif", "MEME", "HOMER", "ChIP-seq"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
meme2homer-py = "python_scripts.meme2homer:main"
homer2meme-py = "python_scripts.homer2meme:main"

[tool.setuptools.packages.find]
include = ["motif_bridge*", "python_scripts*"]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
